--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </style>
 <script>
 /*** === CONFIG À RENSEIGNER === ***/
-const CLIENT_ID    = "TON_CLIENT_ID";                 // <= ← Mets ton Client ID ici
-const REDIRECT_URI = "https://tonsite.github.io/tonpage/"; // <= ← Mets l’URL HTTPS exacte de cette page
+const CLIENT_ID    = "7xi2njzywyo96uuk3wvtpdapykdqrw";                 // <= ← Mets ton Client ID ici
+const REDIRECT_URI = "https://omnescient.github.io/TwitchChatUserGenerator/"; // <= ← Mets l’URL HTTPS exacte de cette page
 
 // Scopes nécessaires (tu peux en retirer si tu veux moins de rôles)
 const SCOPES = [
